fix to alignment of app text

--- a/project/deployment/static/css/vr.css
+++ b/project/deployment/static/css/vr.css
@@ -190,6 +190,7 @@ th.rowlabel {
 
 .titlecell {
   vertical-align: top;
+  text-align: right;
 }
 
 .proccell {
